--- a/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.LCR.Business/TOne.LCR.Business.csproj
@@ -61,6 +61,7 @@
     <Compile Include="RouteRules\RouteActions\OverrideRouteAction.cs" />
     <Compile Include="RouteRules\RouteActions\PriorityRouteAction.cs" />
     <Compile Include="RouteRules\RouteOptionActions\BlockRouteOptionAction.cs" />
+    <Compile Include="RouteRules\RouteOptionActions\CheckRateOptionAtion.cs" />
     <Compile Include="RouteRules\RouteRuleManager.cs" />
   </ItemGroup>
   <ItemGroup>
