--- a/CLITester/AndroitTest/App.config
+++ b/CLITester/AndroitTest/App.config
@@ -3,4 +3,16 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+    <system.serviceModel>
+        <bindings>
+            <basicHttpBinding>
+                <binding name="clireporterSoap" />
+            </basicHttpBinding>
+        </bindings>
+      <client>
+        <endpoint address="http://idsdemo.me/CLIReporter/clireporter.asmx"
+            binding="basicHttpBinding" bindingConfiguration="clireporterSoap"
+            contract="ServiceReference1.clireporterSoap" name="clireporterSoap" />
+      </client>
+    </system.serviceModel>
 </configuration>
