--- a/CLITester/CLITesterSite/Web.config
+++ b/CLITester/CLITesterSite/Web.config
@@ -5,24 +5,25 @@
   -->
 <configuration>
   <system.web>
-    <httpHandlers>
+    <!--<httpHandlers>
       <add path="Reserved.ReportViewerWebControl.axd" verb="*" type="Microsoft.Reporting.WebForms.HttpHandler, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91"
         validate="false" />
-    </httpHandlers>
+    </httpHandlers>-->
     <compilation debug="true" targetFramework="4.5">
-      <assemblies>
+      <!--<assemblies>
         <add assembly="Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
         <add assembly="Microsoft.ReportViewer.Common, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845DCD8080CC91" />
         <add assembly="Microsoft.Build.Framework, Version=4.0.0.0, Culture=neutral, PublicKeyToken=B03F5F7F11D50A3A" />
       </assemblies>
       <buildProviders>
         <add extension=".rdlc" type="Microsoft.Reporting.RdlBuildProvider, Microsoft.ReportViewer.WebForms, Version=11.0.0.0, Culture=neutral, PublicKeyToken=89845dcd8080cc91" />
-      </buildProviders>
+      </buildProviders>-->
     </compilation>
     <httpRuntime targetFramework="4.5"/>
     <pages clientIDMode="Static"/>
   </system.web>
   <appSettings>
+    <add key="pathImg" value="./assets/img/flags/"/>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None"/>
     <add key="ExpiryTimeRequestCall" value="70"/>
     <!-- in seconds -->
@@ -33,4 +34,16 @@
     <add key="ProjectsResources" value="./Resources/"/>
     <add key="ExtensionsResources" value="../Resources/"/>
   </appSettings>
+  <system.serviceModel>
+    <bindings>
+      <basicHttpBinding>
+        <binding name="clireporterSoap" />
+      </basicHttpBinding>
+    </bindings>
+    <client>
+      <endpoint address="http://idsdemo.me/CLIReporter/clireporter.asmx"
+        binding="basicHttpBinding" bindingConfiguration="clireporterSoap"
+        contract="ServiceReference1.clireporterSoap" name="clireporterSoap" />
+    </client>
+  </system.serviceModel>
 </configuration>
