--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,7 +24,7 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.240;Initial Catalog=CDRAnalysisMobile;User ID=sa;Password=iraq@cce$$1;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=walid;Password=walid123;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
     <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=walid;password=walid123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
