git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21700

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis.Website/Web.config
@@ -24,8 +24,8 @@
     <pages theme="skins" />
   </system.web>
   <connectionStrings>
-    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=walid;Password=walid123;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=walid;password=walid123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
+    <add name="CDRAnalysisConnectionString" connectionString="Data Source=192.168.110.241;Initial Catalog=CDRAnalysisMobile;User ID=vanrise;Password=v@nrise;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=192.168.110.241;user id=vanrise;password=v@nrise;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <appSettings>
     <add key="ValidationSettings:UnobtrusiveValidationMode" value="None" />
@@ -33,6 +33,7 @@
     <add key="ReportsPath" value="C:\CA_Reports\"/>
     <add key="UploadPath" value="C:\\FMS_Import\\Manual\\"/>
     <add key="AutomaticUploadPath" value="C:\\FMS_Import\\Automatic\\"/>
+    <add key="SQLType" value="MySQL"/>
   </appSettings>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
