git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21703

--- a/FZero/Vanrise.Fzero.Bypass.TOne/Vanrise.Fzero.Bypass.TOne.csproj
+++ b/FZero/Vanrise.Fzero.Bypass.TOne/Vanrise.Fzero.Bypass.TOne.csproj
@@ -104,8 +104,13 @@
       <Name>Vanrise.CommonLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Dependencies\" />
+    <Content Include="Dependencies\EntityFramework.dll" />
+    <Content Include="Dependencies\log4net.dll" />
+    <Content Include="Dependencies\log4net.xml" />
+    <Content Include="Dependencies\Telerik.Web.UI.dll" />
+    <Content Include="Dependencies\Telerik.Web.UI.xml" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
