--- a/FZero/WebSite1/Web.config
+++ b/FZero/WebSite1/Web.config
@@ -12,8 +12,8 @@
 
     <add key="SERVER" value="192.168.110.241" />
     <add key="DATABASE" value="CDRAnalysisMobile" />
-    <add key="UID" value="walid" />
-    <add key="PASSWORD" value="walid123" />
+    <add key="UID" value="vanrise" />
+    <add key="PASSWORD" value="v@nrise" />
     <add key="ToAddress" value="vanrisefms@gmail.com" />
     <add key="host" value="smtp.gmail.com" />
     <add key="port" value="587" />
