--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -283,6 +283,9 @@
       <Name>Vanrise.CommonLibrary</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Dependencies\MySql.Data.Entity.EF5.dll" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
