--- a/FZero/Vanrise.Fzero.Services.LevelTwoComparison/Vanrise.Fzero.Services.LevelTwoComparison.csproj
+++ b/FZero/Vanrise.Fzero.Services.LevelTwoComparison/Vanrise.Fzero.Services.LevelTwoComparison.csproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="bin\Debug\OpenPop.dll" />
+    <Content Include="Dependencies\OpenPop.dll" />
     <None Include="Service References\ServiceReference1\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
