git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21846

--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/App.Config
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/App.Config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="CDRAnalysisConnectionString" connectionString="Data Source=10.10.10.53;Initial Catalog=CDRAnalysisMobile;User ID=walid;Password=walid123;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
-    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.10.10.53;user id=walid;password=walid123;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
+    <add name="CDRAnalysisConnectionString" connectionString="Data Source=10.10.10.53;Initial Catalog=CDRAnalysisMobile;User ID=vanrise;Password=v@nrise;MultipleActiveResultSets=True;Application Name=EntityFramework" providerName="System.Data.SqlClient" />
+    <add name="MobileEntities" connectionString="metadata=res://*/Model.csdl|res://*/Model.ssdl|res://*/Model.msl;provider=MySql.Data.MySqlClient;provider connection string=&quot;server=10.10.10.53;user id=vanrise;password=v@nrise;persistsecurityinfo=True;database=CDRAnalysisMobile&quot;" providerName="System.Data.EntityClient" />
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
