--- a/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
+++ b/FZero/Vanrise.Fzero.MobileCDRAnalysis/Vanrise.Fzero.MobileCDRAnalysis.csproj
@@ -295,6 +295,9 @@
   <ItemGroup>
     <Content Include="bin\Debug\log4net.dll" />
     <Content Include="bin\Debug\log4net.xml" />
+    <Content Include="bin\Debug\MySql.Data.Entity.EF5.dll" />
+    <Content Include="bin\Debug\MySql.Data.Entity.EF6.dll" />
+    <Content Include="bin\Debug\MySql.Fabric.Plugin.dll" />
     <Content Include="bin\Debug\Telerik.Web.UI.dll" />
     <Content Include="bin\Debug\Telerik.Web.UI.xml" />
     <Content Include="bin\Debug\Vanrise.CommonLibrary.dll" />
@@ -305,6 +308,8 @@
     <Content Include="Dependencies\EntityFramework.xml" />
     <Content Include="Dependencies\MySql.Data.dll" />
     <Content Include="Dependencies\MySql.Data.Entity.EF5.dll" />
+    <Content Include="Dependencies\MySql.Data.Entity.EF6.dll" />
+    <Content Include="Dependencies\MySql.Fabric.Plugin.dll" />
     <Content Include="Dependencies\MySql.Web.dll" />
   </ItemGroup>
   <ItemGroup>
