--- a/TOneV2/Code/TOneV2/Resources/Resources.csproj
+++ b/TOneV2/Code/TOneV2/Resources/Resources.csproj
@@ -52,6 +52,7 @@
     <Content Include="DLLs\Iesi.Collections.dll" />
     <Content Include="DLLs\Interop.xlsgen.dll" />
     <Content Include="DLLs\log4net.dll" />
+    <Content Include="DLLs\Microsoft.AnalysisServices.AdomdClient.dll" />
     <Content Include="DLLs\Mono.Security.dll" />
     <Content Include="DLLs\MySql.Data.dll" />
     <Content Include="DLLs\NGenerics.dll" />
