--- a/TOneV2/Code/TOneV2/TOne.Web/Web.config
+++ b/TOneV2/Code/TOneV2/TOne.Web/Web.config
@@ -7,12 +7,14 @@
   <connectionStrings>
     <add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=ToneDevTest01;User ID=Development;Password=dev!123" />
     <!--<add name="MainDBConnString" connectionString="Server=192.168.110.185;Database=NetTalkForDev;User ID=Development;Password=dev!123" />-->
+    <add name="BIConnectionString" connectionString="Provider=MSOLAP;Data Source = http://192.168.110.185:1214/msmdpump.dll; Initial Catalog = BISLTOneDay; User Id = vanrise\olap.access; Password = 0l@p@cce$$" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="BICubeName" value="BISLT One Day"/>
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5" />
