directive migration finalise
git-tfs-id: [http://developmentvlan:8585/tfs/vanrise.collection]$/;C21919

--- a/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
+++ b/TOneV2/Code/TOneV2/TOne.Web/TOne.Web.csproj
@@ -192,7 +192,9 @@
     <Content Include="Client\Javascripts\Controllers\Routing\CustomerController2.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\CustomerController.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\CodeController.js" />
+    <Content Include="Client\Javascripts\Controllers\Routing\PriorityController2.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteBlockController.js" />
+    <Content Include="Client\Javascripts\Controllers\Routing\RouteOverrideController2.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteRuleEditorController2.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\RouteRuleManagerController.js" />
     <Content Include="Client\Javascripts\Controllers\Routing\ZoneController2.js" />
@@ -487,9 +489,11 @@
     <Content Include="Client\Templates\Directives\vr-textbox-standard.html" />
     <Content Include="Client\Templates\PartialTemplate\CustomerTemplate2.html" />
     <Content Include="Client\Templates\PartialTemplate\PoolTemplate.html" />
+    <Content Include="Client\Templates\PartialTemplate\PriorityTemplate2.html" />
     <Content Include="Client\Templates\PartialTemplate\RouteBlockTemplate.html" />
     <Content Include="Client\Templates\PartialTemplate\ProductTemplate.html" />
     <Content Include="Client\Templates\PartialTemplate\CustomerTemplate.html" />
+    <Content Include="Client\Templates\PartialTemplate\RouteOverrideTemplate2.html" />
     <Content Include="Client\Templates\PartialTemplate\ZoneTemplate2.html" />
     <Content Include="Client\Templates\PartialTemplate\ZoneTemplate.html" />
     <Content Include="Client\Templates\PartialTemplate\CodeTemplate.html" />
