--- a/TOneV2/Code/TOneV2/TOne.BI.Business/TOne.BI.Business.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Business/TOne.BI.Business.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DestinationManager.cs" />
+    <Compile Include="GenericEntityManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesManager.cs" />
   </ItemGroup>
