--- a/TOneV2/Code/TOneV2/TOne.BI.Data.SQL/TOne.BI.Data.SQL.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Data.SQL/TOne.BI.Data.SQL.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseDataManager.cs" />
+    <Compile Include="Columns.cs" />
+    <Compile Include="DestinationDataManager.cs" />
+    <Compile Include="GenericEntityDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SalesDataManager.cs" />
   </ItemGroup>
