--- a/TOneV2/Code/TOneV2/TOne.BI.Data/TOne.BI.Data.csproj
+++ b/TOneV2/Code/TOneV2/TOne.BI.Data/TOne.BI.Data.csproj
@@ -48,6 +48,8 @@
   <ItemGroup>
     <Compile Include="BIDataManagerFactory.cs" />
     <Compile Include="IDataManager.cs" />
+    <Compile Include="IGenericEntityDataManager.cs" />
+    <Compile Include="IDestinationDataManager.cs" />
     <Compile Include="ISalesDataManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
